# page_loader

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-and-test.yml
page_loader/: __init__.py  assets.py  cli.py  naming_generators.py  page.py  parsing.py  test_exceptions.py  test_page-loader.py  url.py
page_loader/scripts/: page_loader.py
page_loader/tests/: test_exceptions.py  test_main.py  test_naming.py  test_page-loader.py
page_loader/tests/fixtures/: fixture.html  ru-hexlet-io-courses.html  ru-hexlet-io-courses_no.html  ru-hexlet-io-courses_no_load.html
page_loader/tests/fixtures/local/: expected_result.html  my_site.html  my_site_copy.html  simple_fixture.html
page_loader/tests/fixtures/local/assets/: my_css.css
page_loader/tests/fixtures/ru-hexlet-io-courses_files/: application-9a6e7bc5.css  courses  lessons.rss
page_loader/tests/fixtures/test_out/: ru-hexlet-io-courses.html
page_loader/tests/fixtures/test_out/ru-hexlet-io-courses_files/: en-hexlet-io-courses.html  ru-hexlet-io-courses.html  ru-hexlet-io-lessons.rss
tests/: test_exceptions.py  test_naming.py  test_page-loader.py  test_page_loader.py  test_url.py
tests/fixtures/hexlet/: localhost-blog-about.html
tests/fixtures/local/: expected_result.html  my_site.html
tests/fixtures/local/assets/: my_script.js
