[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["JMURv <architect.lock@outlook.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
requests-mock = "^1.10.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page-loader:main"